pkg/parser/testdata/authz-allow-negative.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: httpbin-allow-negative
  namespace: foo
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        notNamespaces: ["test"]
    to:
    - operation:
        methods: ["GET"]
        paths: ["/info*"]
